--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 #Spring
 server.port = 8081
 
-spring.datasource.url=jdbc:h2:mem:forum
+#Datasource
+spring.datasource.url=jdbc:h2:file:./h2/free-games
 spring.datasource.username=sa
 spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.driverClassName=org.h2.Driver
 
 # H2
 spring.h2.console.enabled=true
