Attempts to adjust endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #Spring
 server.port = 8081
+server.host = 192.168.18.7
 
 #Datasource
 spring.datasource.url=jdbc:h2:file:./h2/free-games
@@ -15,3 +16,8 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
+
+#Url stock-manager application
+free.to.play.url:https://www.freetogame.com/api/games
+my.free.games.host:${server.host}
+my.free.games.port:${server.port}
