Fixes for unit and integration tests, post method at work.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,7 +3,7 @@ server.port = 8081
 server.host = 192.168.18.7
 
 #Datasource
-spring.datasource.url=jdbc:h2:file:./h2/free-games
+spring.datasource.url=jdbc:h2:mem:free-games
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
@@ -17,8 +17,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
 
-#Url My free games library application
+#Url stock-manager application
 free.to.play.url:https://www.freetogame.com
-my.free.games.url:http://localhost:8081
 my.free.games.host:${server.host}
 my.free.games.port:${server.port}
