Post working, done some unit and integration tests, adjustments made.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,16 @@
 server.port = 8081
 server.host = 192.168.18.7
 
+#Url free to play external API
+free.to.play.url:https://www.freetogame.com
+
+#Url My free games library application
+my.free.games.url:http://localhost:8081
+my.free.games.host:${server.host}
+my.free.games.port:${server.port}
+
 #Datasource
-spring.datasource.url=jdbc:h2:file:./h2/free-games
+spring.datasource.url=jdbc:h2:mem:free-games
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
@@ -16,9 +24,3 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
-
-#Url My free games library application
-free.to.play.url:https://www.freetogame.com
-my.free.games.url:http://localhost:8081
-my.free.games.host:${server.host}
-my.free.games.port:${server.port}
