--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,6 +2,14 @@
 server.port = 8081
 server.host = 192.168.18.7
 
+#Url free to play external API
+free.to.play.url:https://www.freetogame.com
+
+#Url My free games library application
+my.free.games.url:http://localhost:8081
+my.free.games.host:${server.host}
+my.free.games.port:${server.port}
+
 #Datasource
 spring.datasource.url=jdbc:h2:mem:free-games
 spring.datasource.username=sa
@@ -16,8 +24,3 @@ spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.defer-datasource-initialization=true
-
-#Url stock-manager application
-free.to.play.url:https://www.freetogame.com
-my.free.games.host:${server.host}
-my.free.games.port:${server.port}
