--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,10 +5,10 @@ server.port = 8081
 free.to.play.url:https://www.freetogame.com
 
 #Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/bootdb
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=dbc:h2:mem:free-games
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
 
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
