--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,11 +1,11 @@
 #Spring
-server.port = 8081
+server.port = ${PORT}
 
 #Url free to play external API
 free.to.play.url:https://www.freetogame.com
 
 #Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/bootdb
+spring.datasource.url=jdbc:mysql://${MYSQL_CONTAINER}:3306/bootdb
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
@@ -13,11 +13,6 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 #Swagger
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-# H2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
 # JPA
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.open-in-view=false
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
