--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@
 server.port = ${PORT}
 
 #Url free to play external API
-free.to.play.url:https://www.freetogame.com
+free.to.play.url:${FREETOGAME_API_URL}
 
 #Datasource
 spring.datasource.url=jdbc:mysql://${MYSQL_CONTAINER}:3306/bootdb
